# nrf5340dk_PN7160

./: CMakeLists.txt  Kconfig  README.rst  app.overlay  prj.conf
dts/bindings/: nxp,pn7160.yaml
src/: main.c
src/cmd/: cmd.c
src/peripheral_uart/: peripheral_uart.c  peripheral_uart.h
src/pn7160/: ndef_helper.c  nfc_task.c  nfc_thread.c  nfc_thread.h
src/pn7160/NfcLibrary_NCI2.0/NdefLibrary/inc/: P2P_NDEF.h  RW_NDEF.h  RW_NDEF_MIFARE.h  RW_NDEF_T1T.h  RW_NDEF_T2T.h  RW_NDEF_T3T.h  RW_NDEF_T4T.h  RW_NDEF_T5T.h  T4T_NDEF_emu.h
src/pn7160/NfcLibrary_NCI2.0/NdefLibrary/src/: P2P_NDEF.c  RW_NDEF.c  RW_NDEF_MIFARE.c  RW_NDEF_T1T.c  RW_NDEF_T2T.c  RW_NDEF_T3T.c  RW_NDEF_T4T.c  RW_NDEF_T5T.c  T4T_NDEF_emu.c
src/pn7160/NfcLibrary_NCI2.0/NxpNci20/inc/: NxpNci20.h
src/pn7160/NfcLibrary_NCI2.0/NxpNci20/src/: NxpNci20.c
src/pn7160/NfcLibrary_NCI2.0/inc/: Nfc.h  Nfc_settings.h
src/pn7160/TML/inc/: tml.h
src/pn7160/TML/src/: tml.c
src/pn7160/board/inc/: driver_config.h  types.h
src/pn7160/inc/: ndef_helper.h  nfc_task.h  tool.h
src/remote_shell/: shell_ipc_host.c  shell_ipc_host.h  start.c
sysbuild/ipc_radio/: prj.conf  prj_bt_rpc.conf
sysbuild/ipc_radio/boards/: nrf5340dk_nrf5340_cpunet.overlay
